# desk-pico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
port/FreeRTOS-Kernel/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.cpp
src/include/: PCF8575.h
